fix spacing for filters

--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -10,32 +10,3 @@
     margin: 30px auto;
     text-align: center;
 }
-button {
-    font-size: 18px;
-    background-color: #FF5A5F;
-    color: #FFFFFF;
-    width: 20em;
-    height: 48px;
-    border: none;
-    border-radius: 4px;
-    position: absolute;
-    right: 30px;
-}
-button:hover {
-    opacity: 90%;
-}
-.container .locations {
-    height: 100%;
-    width: 25%;
-    border-right: #DDDDDD 1px;
-}
-.container .amenities {
-    height: 100%;
-    width: 25%;
-}
-.container h3 {
-    font-weight: 600;
-}
-.container h4 {
-    font-weight: 400;
-}
